--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title> Github page </title>
-  <link rel="stylesheet" href="/style.css" type="text/css"> 
+  <link rel="stylesheet" href="style.css"/> 
 </head>
 
 <body>
