--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title> Github page </title>
   <link rel="stylesheet" href="style.css"/> 
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
 </head>
 
 <body>
