--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 <body>
   <div class="main">
     <header class="header">
-      <h1> Emma Stout </h1>
-      <h3> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </h3>
-      <h3> Profile</h3>
-      <ul> 
-        <li> </li>
-      </ul>
+      <h1 class="name"> Emma Stout </h1>
+      <p class="contact"> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </p>
     </header>
-    <div class="experience">
+    <div class="content">
       <h3 class="heading"> Education</h3>
       <p>Macalester College, St. Paul, MN</p>
       <p>Bachelor of Arts, May 2015</p>
