--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p class="contact"> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </p>
     </header>
     <div class="content">
-      <h3 class="heading"> Education</h3>
+      <h3 class="heading" class="education"> Education</h3>
       <p>Macalester College, St. Paul, MN</p>
       <p>Bachelor of Arts, May 2015</p>
       <p>Major in History, minor in American Studies</p>
