--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+   <div class="main">
     <header class="header">
       <h1 class="name"> Emma Stout </h1>
       <p class="contact"> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </p>
@@ -102,5 +103,5 @@
       <p>Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
        
     </div>
-
+  </div>
 </body>
