--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
       <h1 class="name"> Emma Stout </h1>
       <p class="contact"> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </p>
-      <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/10174901_1610661935824661_6045669219645028411_n.jpg?oh=7eff9c4c9ef85fc3a1857ad12d0bee7c&oe=59E3B699">
+      <img src="https://github.com/emmastout01/emmastout01.github.io/blob/master/Photo%20resized.jpg?raw=true">
     </header>
     <div class="content">
       <h3 class="heading" class="education"> Education</h3>
