Added new photo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header class="header">
       <h1 class="name"> Emma Stout </h1>
       <p class="contact"> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </p>
-      <img src="https://github.com/emmastout01/emmastout01.github.io/blob/master/Photo%20resized.jpg?raw=true">
+      <div class="container">
+        <img src="https://github.com/emmastout01/emmastout01.github.io/blob/master/Photo%20resized%20and%20cropped--2.png?raw=true">
+      </div>
     </header>
     <div class="content">
       <h3 class="heading" class="education"> Education</h3>
