Added header container

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
    <div class="main">
     <header class="header">
+     <div class=headercontainer>
       <h1 class="name"> Emma Stout </h1>
       <p class="contact"> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </p>
-        <img src="https://github.com/emmastout01/emmastout01.github.io/blob/master/Photo%20resized%20and%20cropped--2.png?raw=true">
+      </div>
+      <img src="https://github.com/emmastout01/emmastout01.github.io/blob/master/Photo%20resized%20and%20cropped--2.png?raw=true">
     </header>
     <div class="content">
       <h3 class="heading" class="education"> Education</h3>
