--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    <div class="main">
     <header class="header">
-     <div class=headercontainer>
+     <div class="headercontainer">
       <h1 class="name"> Emma Stout </h1>
       <p class="contact"> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </p>
       </div>
