Added div around 1st workplace and duration

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="https://github.com/emmastout01/emmastout01.github.io/blob/master/Photo%20resized%20and%20cropped--2.png?raw=true">
     </header>
     <div class="content">
-      <h3 class="heading" class="education"> Education</h3>
+      <h3 class="heading"> Education</h3>
       <p>Macalester College, St. Paul, MN</p>
       <p>Bachelor of Arts, May 2015</p>
       <p>Major in History, minor in American Studies</p>
@@ -30,8 +30,10 @@
         <li>Provide academic assistance to students in grades 9-12 during Guided Study Hall</li>
         <li>Record and track data on student attendance, behavior, and course performance</li>
       </ul>
+     <div class="experience-line">
       <p class="workplace">First Universalist Church of Minneapolis</p>
       <p class="duration">January 2015-May 2017</p>
+      </div>
       <p class="position">Coming of Age Program Assistant</p>
       <ul>
         <li>Coordinate logistics and assist in teaching weekly 9th grade Coming of Age program</li>
