Added divs for workplace/duration

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    <div class="main">
     <header class="header">
-     <div class="headercontainer">
+      <div class="headercontainer">
       <h1 class="name"> Emma Stout </h1>
       <p class="contact"> 5356 36th Avenue South, Minneapolis, MN 55417 * 651-239-3734 * emma.stout01@gmail.com </p>
       </div>
@@ -23,8 +23,10 @@
       <p>Honors:</p> 
       <p>Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
       <h3 class="heading">Work Experience</h3>
-      <p class="workplace">Saint Paul Conservatory for Performing Artists</p>
-      <p class="duration">September 2016-May 2017</p>
+      <div class="experience-line">
+       <p class="workplace">Saint Paul Conservatory for Performing Artists</p>
+       <p class="duration">September 2016-May 2017</p>
+      </div>
       <p class="position">Guided Study Hall Supervisor</p>
       <ul>
         <li>Provide academic assistance to students in grades 9-12 during Guided Study Hall</li>
@@ -33,66 +35,82 @@
      <div class="experience-line">
       <p class="workplace">First Universalist Church of Minneapolis</p>
       <p class="duration">January 2015-May 2017</p>
-      </div>
+     </div> 
       <p class="position">Coming of Age Program Assistant</p>
       <ul>
         <li>Coordinate logistics and assist in teaching weekly 9th grade Coming of Age program</li>
         <li>Effectively and clearly communicate program details with youth, families and volunteers</li>
         <li>Create a safe and welcoming space for all youth</li>
       </ul>
-      <p class="position">Youth Program Assistant</p>
-      <p class="duration">June 2016-June 2017</p>
+      <div class="experience-line">
+        <p class="position">Youth Program Assistant</p>
+        <p class="duration">June 2016-June 2017</p>
+      </div>
       <ul> 
         <li>Coordinated 7th-9th grade youth programming including overnight retreats, biweekly faith community visits, fund raising for youth trips, and community-building activities</li>
         <li>Designed engaging 16-session curriculum for 7th grade Neighboring Faiths program</li>
       </ul>
+     <div class="experience-line">
       <p class="workplace">Macalester College Department of Multicultural Life</p>
       <p class="duration">September 2014-May 2015</p>
+     </div>
       <p class="position">Program Assistant</p>
       <ul> 
         <li> Worked on a diverse team to promote a campus culture of equity and understanding across difference</li>
         <li> Developed, publicized and co-facilitated two student discussions about multiculturalism and social justice</li>
       </ul>
-      <p class="workplace">Breakthrough Greater Boston</p>
-      <p class="duration">June-August 2014</p>
+      <div class="experience-line">
+        <p class="workplace">Breakthrough Greater Boston</p>
+        <p class="duration">June-August 2014</p>
+      </div>
       <p class="position">Teaching Fellow</p>
       <ul>
         <li> Designed rigorous 6-week curriculum and daily lesson plans for 7th grade History class? </li>
         <li> Built relationships with students and families from diverse cultural backgrounds </li>
         <li> Served on a teacher leadership team that provided support and mentorship to faculty</li>
       </ul>
-      <p class="workplace"> Breakthrough Saint Paul</p>
-      <p class="duration"> June-August 2012</p>
+       <div class="experience-line">
+        <p class="workplace"> Breakthrough Saint Paul</p>
+        <p class="duration"> June-August 2012</p>
+       </div>
       <p class="position">Teaching Fellow</p>
       <ul>
         <li>Developed and executed engaging daily lesson plans for 8th grade science class</li>
         <li>Created a positive, rigorous learning environment for middle school students</li>
         <li>Collaborated with fellow teachers on a daily basis</li>
       </ul>
-      <p class="workplace">Great River Greening</p>
-      <p class="duration">August-December 2010</p>
+      <div class="experience-line">
+        <p class="workplace">Great River Greening</p>
+        <p class="duration">August-December 2010</p>
+      </div>  
       <p class="position">Intern</p>
       <ul>
         <li>Developed program to connect at-risk youth with green jobs professionals at large-scale volunteer events</li>
         <li>Created one-hour curriculum and materials about green jobs for high school classrooms</li>
       </ul>
       <h3 class="heading">Civic Engagement and Leadership Experience</h3>
-      <p class="workplace">Macalester College Cultural House</p>
-      <p class="duration">September 2014-May 2015</p>
+      <div class="experience-line">
+        <p class="workplace">Macalester College Cultural House</p>
+        <p class="duration">September 2014-May 2015</p>
+      </div>
       <p class="position">Resident</p>
       <ul>
         <li>Engaged in intentional community that focuses on building relationships across difference</li>
         <li>Participated in weekly  house discussions on multiculturalism, privilege, and social justice</li>
       </ul>
-      <p class="workplace">FIA-STARSA (Feminists in Action/Students Together Against Rape and Sexual Assault)</p>
-      <p class="duration">September 2011-December 2014</p>
+      <div class="experience-line">
+        <p class="workplace">FIA-STARSA (Feminists in Action/Students Together Against Rape and Sexual Assault)</p>
+        <p class="duration">September 2011-December 2014</p>
+      </div>
       <p class="position">Cochair, Member</p>
       <ul>
         <li>Facilitated weekly discussions about feminism, sexual violence prevention, and social justice</li>
         <li>Coordinated annual FIA-STARSA events</li>
       </ul>
-      <p class="workplace">Hmong American Partnership</p>
-      <p class="duration"> September-December 2013</p>
+      <div class="experience-line">
+        <p class="workplace">Hmong American Partnership</p>
+        <p class="duration"> September-December 2013</p>
+      </div>
       <p class="position"> Volunteer</p>
       <ul>
         <li>Collaborated with two classmates to create a volunteer resource website through Wordpress</li>
