--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     </header>
     <div class="content">
       <h3 class="heading"> Education</h3>
-      <p>Macalester College, St. Paul, MN</p>
-      <p>Bachelor of Arts, May 2015</p>
-      <p>Major in History, minor in American Studies</p>
-      <p>GPA: 3.85/4.0</p>
+      <div class="experience-line"> 
+        <p>Macalester College, St. Paul, MN</p>
+        <p>Bachelor of Arts, May 2015</p>
+      </div>
+      <div class="experience-line">
+        <p>Major in History, minor in American Studies</p>
+        <p>GPA: 3.85/4.0</p>
+      </div>
       <p>Honors:</p> 
       <p>Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
       <h3 class="heading">Work Experience</h3>
