--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title> Github page </title>
   <link rel="stylesheet" href="style.css"/> 
   <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 </head>
 
 <body>
