Added classes/divs to education area

--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     <div class="content">
       <h3 class="heading"> Education</h3>
       <div class="experience-line"> 
-        <p>Macalester College, St. Paul, MN</p>
-        <p>Bachelor of Arts, May 2015</p>
+        <p class="left">Macalester College, St. Paul, MN</p>
+        <p class="right">Bachelor of Arts, May 2015</p>
       </div>
       <div class="experience-line">
-        <p>Major in History, minor in American Studies</p>
-        <p>GPA: 3.85/4.0</p>
+        <p class="left">Major in History, minor in American Studies</p>
+        <p class="right">GPA: 3.85/4.0</p>
       </div>
-      <p>Honors:</p> 
-      <p>Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
+      <div class="inline">
+        <p>Honors:</p> 
+        <p>Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
+      </div>
       <h3 class="heading">Work Experience</h3>
       <div class="experience-line">
        <p class="workplace">Saint Paul Conservatory for Performing Artists</p>
@@ -120,7 +122,7 @@
       <p>Spanish (intermediate)</p>
       <p>Other Skills:</p>
       <p>Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
-       
+      
     </div>
   </div>
 </body>
