Added divs to special skills

--- a/index.html
+++ b/index.html
@@ -116,13 +116,18 @@
         <li>Worked one-on-one with adult English language learners to improve reading and speaking skills</li>
       </ul>
       <h3 class="heading">Special Skills</h3>
-      <p>Computer Skills:</p>
-      <p>Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
-      <p>Language Skills:</p>
-      <p>Spanish (intermediate)</p>
-      <p>Other Skills:</p>
-      <p>Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
-      
+      <div class="inline">
+        <p>Computer Skills:</p>
+        <p>Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
+      </div>
+      <div class="inline">
+        <p>Language Skills:</p>
+        <p>Spanish (intermediate)</p>
+      </div>
+      <div class="inline">
+        <p>Other Skills:</p>
+        <p>Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
+      </div>
     </div>
   </div>
 </body>
