--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
         <p class="left">Major in History, minor in American Studies</p>
         <p class="right">GPA: 3.85/4.0</p>
       </div>
-      <div class="inline">
-        <p>Honors:</p> 
-        <p>Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
-      </div>
+        <p class="no-bottom-margin">Honors:</p> 
+        <p class="no-top-margin">Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
       <h3 class="heading">Work Experience</h3>
       <div class="experience-line">
        <p class="workplace">Saint Paul Conservatory for Performing Artists</p>
@@ -116,18 +114,12 @@
         <li>Worked one-on-one with adult English language learners to improve reading and speaking skills</li>
       </ul>
       <h3 class="heading">Special Skills</h3>
-      <div class="inline">
-        <p>Computer Skills:</p>
-        <p>Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
-      </div>
-      <div class="inline">
-        <p>Language Skills:</p>
-        <p>Spanish (intermediate)</p>
-      </div>
-      <div class="inline">
-        <p>Other Skills:</p>
-        <p>Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
-      </div>
+        <p class="no-bottom-margin">Computer Skills:</p>
+        <p class="no-top-margin">Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
+        <p class="no-bottom-margin">Language Skills:</p>
+        <p class="no-top-margin">Spanish (intermediate)</p>
+        <p class="no-bottom-margin">Other Skills:</p>
+        <p class="no-top-margin">Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
     </div>
   </div>
 </body>
