Changed skills section

--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
         <li>Worked one-on-one with adult English language learners to improve reading and speaking skills</li>
       </ul>
       <h3 class="heading">Special Skills</h3>
-      <div container="flex">  
-        <p>Computer Skills:</p>
-        <p>Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
+      <div class="flex">  
+        <p class="skills">Computer Skills:</p>
+        <p class="skills">Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
       </div>
       <div class="flex">
-        <p>Language Skills:</p>
-        <p>Spanish (intermediate)</p>
+        <p class="skills">Language Skills:</p>
+        <p class="skills">Spanish (intermediate), Hebrew (beginner)</p>
       </div>
       <div class="flex">   
-        <p>Other Skills:</p>
-        <p>Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
+        <p class="skills">Other Skills:</p>
+        <p class="skills">Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
       </div>
     </div>
   </div>
