--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="position">Major in History, minor in American Studies</p>
         <p class="position">GPA: 3.85/4.0</p>
       </div>
-      <div class="flex">
+      <div class="flex1">
         <p>Honors:</p> 
         <p>Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
       </div> 
@@ -116,15 +116,15 @@
         <li>Worked one-on-one with adult English language learners to improve reading and speaking skills</li>
       </ul>
       <h3 class="heading">Special Skills</h3>
-      <div class="flex">  
+      <div class="flex2">  
         <p class="skills">Computer Skills:</p>
         <p class="skills">Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
       </div>
-      <div class="flex">
+      <div class="flex2">
         <p class="skills">Language Skills:</p>
         <p class="skills">Spanish (intermediate), Hebrew (beginner)</p>
       </div>
-      <div class="flex">   
+      <div class="flex1">   
         <p class="skills">Other Skills:</p>
         <p class="skills">Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
       </div>
