Added bold and underline, removed superf. divs

--- a/index.html
+++ b/index.html
@@ -18,17 +18,14 @@
     <div class="content">
       <h3 class="heading"> Education</h3>
       <div class="experience-line"> 
-        <p class="position">Macalester College, St. Paul, MN</p>
+        <p class="position"><b>Macalester College</b>, St. Paul, MN</p>
         <p class="position">Bachelor of Arts, May 2015</p>
       </div>
       <div class="experience-line">
         <p class="position">Major in History, minor in American Studies</p>
         <p class="position">GPA: 3.85/4.0</p>
       </div>
-      <div class="flex1">
-        <p>Honors:</p> 
-        <p>Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
-      </div> 
+      <p><u>Honors:</u> Magna Cum Laude; Recipient of the Kathleen Rock Hauser Prize in Women's and Gender History, Recipient of Dewitt Wallace Scholarship; Macalester Dean's List 2012-2013, 2015</p>
       <h3 class="heading">Work Experience</h3>
       <div class="experience-line">
        <p class="workplace">Saint Paul Conservatory for Performing Artists</p>
@@ -116,18 +113,9 @@
         <li>Worked one-on-one with adult English language learners to improve reading and speaking skills</li>
       </ul>
       <h3 class="heading">Special Skills</h3>
-      <div class="flex2">  
-        <p class="skills">Computer Skills:</p>
-        <p class="skills">Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
-      </div>
-      <div class="flex2">
-        <p class="skills">Language Skills:</p>
-        <p class="skills">Spanish (intermediate), Hebrew (beginner)</p>
-      </div>
-      <div class="flex1">   
-        <p class="skills">Other Skills:</p>
-        <p class="skills">Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
-      </div>
+      <p class="skills"><b><u>Computer Skills:</b></u>Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
+      <p class="skills"><b><u>Language Skills:</b></u> Spanish (intermediate), Hebrew (beginner)</p>
+      <p class="skills"><b><u>Other Skills:</b></u> Strong work ethic and ability to problem-solve; attention to detail; strong oral and written communication skills; experience working with diverse communities; warm and friendly demeanor</p>
     </div>
   </div>
 </body>
