--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <p class="workplace">Saint Paul Conservatory for Performing Artists</p>
        <p class="duration">September 2016-May 2017</p>
       </div>
-      <p class="position">Guided Study Hall Supervisor</p>
+      <p class="position"><i>Guided Study Hall Supervisor</i></p>
       <ul>
         <li>Provide academic assistance to students in grades 9-12 during Guided Study Hall</li>
         <li>Record and track data on student attendance, behavior, and course performance</li>
@@ -40,14 +40,14 @@
       <p class="workplace">First Universalist Church of Minneapolis</p>
       <p class="duration">January 2015-May 2017</p>
      </div> 
-      <p class="position">Coming of Age Program Assistant</p>
+      <p class="position"><i>Coming of Age Program Assistant</i></p>
       <ul>
         <li>Coordinate logistics and assist in teaching weekly 9th grade Coming of Age program</li>
         <li>Effectively and clearly communicate program details with youth, families and volunteers</li>
         <li>Create a safe and welcoming space for all youth</li>
       </ul>
       <div class="experience-line">
-        <p class="position">Youth Program Assistant</p>
+        <p class="position"><i>Youth Program Assistant</i></p>
         <p class="duration">June 2016-June 2017</p>
       </div>
       <ul> 
@@ -58,7 +58,7 @@
       <p class="workplace">Macalester College Department of Multicultural Life</p>
       <p class="duration">September 2014-May 2015</p>
      </div>
-      <p class="position">Program Assistant</p>
+      <p class="position"><i>Program Assistant</i></p>
       <ul> 
         <li> Worked on a diverse team to promote a campus culture of equity and understanding across difference</li>
         <li> Developed, publicized and co-facilitated two student discussions about multiculturalism and social justice</li>
@@ -67,7 +67,7 @@
         <p class="workplace">Breakthrough Greater Boston</p>
         <p class="duration">June-August 2014</p>
       </div>
-      <p class="position">Teaching Fellow</p>
+      <p class="position"><i>Teaching Fellow</i></p>
       <ul>
         <li> Designed rigorous 6-week curriculum and daily lesson plans for 7th grade History class? </li>
         <li> Built relationships with students and families from diverse cultural backgrounds </li>
@@ -77,7 +77,7 @@
         <p class="workplace"> Breakthrough Saint Paul</p>
         <p class="duration"> June-August 2012</p>
        </div>
-      <p class="position">Teaching Fellow</p>
+      <p class="position"><i>Teaching Fellow</i></p>
       <ul>
         <li>Developed and executed engaging daily lesson plans for 8th grade science class</li>
         <li>Created a positive, rigorous learning environment for middle school students</li>
@@ -88,7 +88,7 @@
         <p class="workplace">Macalester College Cultural House</p>
         <p class="duration">September 2014-May 2015</p>
       </div>
-      <p class="position">Resident</p>
+      <p class="position"><i>Resident</i></p>
       <ul>
         <li>Engaged in intentional community that focuses on building relationships across difference</li>
         <li>Participated in weekly  house discussions on multiculturalism, privilege, and social justice</li>
@@ -97,7 +97,7 @@
         <p class="workplace">FIA-STARSA (Feminists in Action/Students Together Against Rape and Sexual Assault)</p>
         <p class="duration">September 2011-December 2014</p>
       </div>
-      <p class="position">Cochair, Member</p>
+      <p class="position"><i>Cochair, Member</i></p>
       <ul>
         <li>Facilitated weekly discussions about feminism, sexual violence prevention, and social justice</li>
         <li>Coordinated annual FIA-STARSA events</li>
@@ -106,7 +106,7 @@
         <p class="workplace">Hmong American Partnership</p>
         <p class="duration"> September-December 2013</p>
       </div>
-      <p class="position"> Volunteer</p>
+      <p class="position"><i>Volunteer</i></p>
       <ul>
         <li>Collaborated with two classmates to create a volunteer resource website through Wordpress</li>
         <li>Assisted English language learners in adult ESL classroom</li>
