--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
       </div>
       <p class="position"><i>Guided Study Hall Supervisor</i></p>
       <ul>
-        <li>Provide academic assistance to students in grades 9-12 during Guided Study Hall</li>
-        <li>Record and track data on student attendance, behavior, and course performance</li>
+        <li>Provided academic assistance to students in grades 9-12 during Guided Study Hall</li>
+        <li>Tutored students in Algebra, Geometry and Physical Science
+        <li>Recorded and tracked data on student attendance, behavior, and course performance</li>
       </ul>
      <div class="experience-line">
       <p class="workplace">First Universalist Church of Minneapolis</p>
@@ -42,9 +43,9 @@
      </div> 
       <p class="position"><i>Coming of Age Program Assistant</i></p>
       <ul>
-        <li>Coordinate logistics and assist in teaching weekly 9th grade Coming of Age program</li>
-        <li>Effectively and clearly communicate program details with youth, families and volunteers</li>
-        <li>Create a safe and welcoming space for all youth</li>
+        <li>Coordinated logistics and assisted in teaching weekly 9th grade Coming of Age program</li>
+        <li>Organized the annual 9th grade youth pilgrimage to Boston including planning itinerary, fundraising, and trip finances</li>
+        <li>Effectively and clearly communicated program details with youth, families and volunteers</li>
       </ul>
       <div class="experience-line">
         <p class="position"><i>Youth Program Assistant</i></p>
@@ -53,6 +54,7 @@
       <ul> 
         <li>Coordinated 7th-9th grade youth programming including overnight retreats, biweekly faith community visits, fund raising for youth trips, and community-building activities</li>
         <li>Designed engaging 16-session curriculum for 7th grade Neighboring Faiths program</li>
+        <li>Created a safe and welcoming space for all youth</li>
       </ul>
      <div class="experience-line">
       <p class="workplace">Macalester College Department of Multicultural Life</p>
@@ -100,7 +102,7 @@
       <p class="position"><i>Cochair, Member</i></p>
       <ul>
         <li>Facilitated weekly discussions about feminism, sexual violence prevention, and social justice</li>
-        <li>Coordinated annual FIA-STARSA events</li>
+        <li>Coordinated annual FIA-STARSA events, including Take Back the Night ralley and The Clothesline Project public art exhibit</li>
       </ul>
       <div class="experience-line">
         <p class="workplace">Hmong American Partnership</p>
@@ -108,9 +110,9 @@
       </div>
       <p class="position"><i>Volunteer</i></p>
       <ul>
-        <li>Collaborated with two classmates to create a volunteer resource website through Wordpress</li>
         <li>Assisted English language learners in adult ESL classroom</li>
         <li>Worked one-on-one with adult English language learners to improve reading and speaking skills</li>
+        <li>Collaborated with two classmates to create a volunteer resource website through Wordpress</li>
       </ul>
       <h3 class="heading">Special Skills</h3>
       <p class="skills"><b><u>Computer Skills:</b></u> Basic understanding of HTML5 and CSS3; experienced in Google apps; proficient in Microsoft Office</p>
