Added spot for objective

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title> Github page </title>
+  <title>Emma Stout Resume</title>
   <link rel="stylesheet" href="style.css"/> 
   <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
@@ -16,6 +16,8 @@
       <img src="https://github.com/emmastout01/emmastout01.github.io/blob/master/Photo%20resized%20and%20cropped--3.png?raw=true">
     </header>
     <div class="content">
+     <div class="objective">
+       <p>THis is where my objective will go.</p>
       <h3 class="heading"> Education</h3>
       <div class="experience-line"> 
         <p class="position"><b>Macalester College</b>, St. Paul, MN</p>
