--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="content">
      <div class="objective">
        <p>THis is where my objective will go.</p>
+      </div>
       <h3 class="heading"> Education</h3>
       <div class="experience-line"> 
         <p class="position"><b>Macalester College</b>, St. Paul, MN</p>
