--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <div class="content">
      <div class="objective">
-       <p>Analytical, creative thinker aspiring to make a positive community impact through thoughtful web development.</p>
+       <p>Analytical, creative thinker aspiring to make a positive community impact<br />through thoughtful web development.</p>
       </div>
       <h3 class="heading"> Education</h3>
       <div class="experience-line"> 
