Fixed content errors

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </ul>
       <div class="experience-line">
         <p class="position"><i>Youth Program Assistant</i></p>
-        <p class="duration">June 2016-June 2017</p>
+        <p class="duration">June 2015-June 2016</p>
       </div>
       <ul> 
         <li>Coordinated 7th-9th grade youth programming including overnight retreats, biweekly faith community visits, fundraising for youth trips, and community-building activities</li>
@@ -74,7 +74,7 @@
       </div>
       <p class="position"><i>Teaching Fellow</i></p>
       <ul>
-        <li> Designed rigorous 6-week curriculum and daily lesson plans for 7th grade History class? </li>
+        <li> Designed rigorous 6-week curriculum and daily lesson plans for 7th grade History class </li>
         <li> Built relationships with students and families from diverse cultural backgrounds </li>
         <li> Served on a teacher leadership team that provided support and mentorship to faculty</li>
       </ul>
