Added Oxford comma

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="position"><i>Guided Study Hall Supervisor</i></p>
       <ul>
         <li>Provided academic assistance to students in grades 9-12 during Guided Study Hall</li>
-        <li>Tutored students in Algebra, Geometry and Physical Science
+        <li>Tutored students in Algebra, Geometry, and Physical Science
         <li>Recorded and tracked data on student attendance, behavior, and course performance</li>
       </ul>
      <div class="experience-line">
@@ -48,7 +48,7 @@
       <ul>
         <li>Coordinated logistics and assisted in teaching weekly 9th grade Coming of Age program</li>
         <li>Organized the annual 9th grade youth pilgrimage to Boston including planning itinerary, fundraising, and trip finances</li>
-        <li>Effectively and clearly communicated program details with youth, families and volunteers</li>
+        <li>Effectively and clearly communicated program details with youth, families, and volunteers</li>
       </ul>
       <div class="experience-line">
         <p class="position"><i>Youth Program Assistant</i></p>
